[package]
name = "d3dapps-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
array-init = "2.1.0"

[dependencies.windows]
version = "0.62.2"
features = [
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_UI_WindowsAndMessaging",
]
